--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 				<img class="abacaxi" src="./assets/imgs/drink_abacaxi.jpg" alt="Drink de abacaxi">
 				<p>Este drink refrescante combina abacaxi, hortelã e rum branco. É perfeito para dias quentes de verão!
 				</p>
-				<a href="#">Ver receita</a>
+				<a href="javascript:openPopup()">Ver receita</a>
 			</article>
 
 			<article>
