--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 				<img class="abacaxi" src="./assets/imgs/drink_abacaxi.jpg" alt="Drink de abacaxi">
 				<p>Este drink refrescante combina abacaxi, hortelã e rum branco. É perfeito para dias quentes de verão!
 				</p>
-				<a href="javascript:openPopup()">Ver receita</a>
+				<a href="javascript:openAbacaxi()">Ver receita</a>
 			</article>
 
 			<article>
@@ -43,14 +43,14 @@
 				<img class="maracuja" src="./assets/imgs/maracuja.jpg" alt="Caipirinha de maracujá">
 				<p>Esta caipirinha é uma deliciosa mistura de maracujá e cachaça. É uma ótima opção para quem quer
 					experimentar um drink brasileiro tradicional.</p>
-				<a href="#">Ver receita</a>
+				<a href="javascript:openMaracuja()">Ver receita</a>
 			</article>
 
 			<article>
 				<h3>Drink de Morango</h3>
 				<img class="morango" src="./assets/imgs/caipirinha-de-morango-scaled.jpg" alt="Drink de morango">
 				<p>Este drink de morango é doce e refrescante, perfeito para um happy hour com amigos. </p>
-				<a href="#">Ver receita</a>
+				<a href="javascript:openMorango()">Ver receita</a>
 			</article>
 		</section>
 
