--- a/maracuja.html
+++ b/maracuja.html
@@ -1,6 +1,3 @@
-O problema está na função `close()` que deve ser alterada. A função correta é `window.close()` e você também precisa escolher outro nome para a função, já que `close` é uma palavra reservada do JavaScript. Aqui está o código corrigido:
-
-```
 <!DOCTYPE html>
 <html lang="en">
 
@@ -8,17 +5,29 @@ O problema está na função `close()` que deve ser alterada. A função correta
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <style> 
+        p{
+            font-size: 1.5em;
+            padding: 2%;
+        }
+            img{
+                width: 100%;
+            }
+            a{
+                text-decoration: none;
+                color: black;
+                font-size: 1.5em;
+            }
+    </style>
+    <title>Caipirinha de Maracuja</title>
 </head>
 
 <body>
     <section>
         <article>
-            <h3>Caipirinha de Maracujá</h3>
+            <h2>Caipirinha de Maracujá</h2>
             <img class="maracuja" src="./assets/imgs/maracuja.jpg" alt="Caipirinha de maracujá">
-            <p>Claro, aqui está uma receita simples de caipirinha de maracujá:
-
-                Ingredientes:
+            <p>  Ingredientes:<br><br>
                 - 1 maracujá maduro
                 - 2 colheres de sopa de açúcar
                 - 1/2 limão
