--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 					experimentar um drink brasileiro tradicional.</p>
 				<a href="javascript:openMaracuja()">Ver receita</a>
 			</article>
-
+<!--Verificando se está funcionando o commit-->
 			<article>
 				<h3>Drink de Morango</h3>
 				<img class="morango" src="./assets/imgs/caipirinha-de-morango-scaled.jpg" alt="Drink de morango">
