--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 	<meta charset="UTF-8">
 	<title>Receitas de Drinks Tropicais</title>
 	<link rel="stylesheet" href="./assets/css/style.css">
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
 </head>
 
 <body>
@@ -82,7 +83,14 @@
 				prepare-se para saborear alguns dos melhores drinks já criados!</p>
 			<a href="https://pay.hotmart.com/N82354676P" target="_blank">Compre agora</a>
 		</section>
-
+		<div class="card">
+			<img src="./assets/imgs/maracuja.jpg" alt="Imagem do Cartão" class="card-img">
+			<div class="card-body">
+			  <h3 class="card-title">Título do Cartão</h3>
+			  <p class="card-text">Descrição do Cartão</p>
+			  <button class="card-button">Botão</button>
+			</div>
+		  </div>
 	</main>
 	<script src="./assets/script.js"></script>
 </body>
